tools/tests/errors/ord_multichar.experr
ord expects a single character
